<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".screens.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Binance_Login"
            style="@style/text_black"
            android:textSize="25sp"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/anuphan_semi_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/ibmplexsansmedium"
                android:textColor="@color/gray_blue"/>
                <EditText
                    android:id="@+id/edt_email_login"
                    android:layout_marginTop="@dimen/margintop_input_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_input_login"
                    android:paddingHorizontal="@dimen/padding_horizontal_input_login"
                    android:textSize="@dimen/text_size_input_login"
                    android:text="test100@gmail.com"
                    style="@style/input_login"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/ibmplexsansmedium"
                android:textColor="@color/gray_blue"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input_login"
                android:gravity="center"
                android:layout_marginTop="@dimen/margintop_input_login"
                style="@style/input_login">
                <EditText
                    android:id="@+id/edt_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/padding_horizontal_input_login"
                    android:textSize="@dimen/text_size_input_login"
                    android:text="123123"
                    style="@style/input_login"/>
                <ImageView
                    android:id="@+id/img_password_login"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginHorizontal="10sp"
                    android:src="@drawable/hidden"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_login"
            android:textAllCaps="false"
            android:fontFamily="@font/ibmplexsansmedium"
            android:textColor="@color/black"
            android:text="@string/LogIn" />

        <TextView
            android:id="@+id/txt_create_account_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/anuphan_semi_bold"
            android:layout_marginTop="30sp"
            android:textColor="@color/yellow_bold"
            android:text="@string/Create_a_Binance_Account"/>
    </LinearLayout>
</ScrollView>