<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:orientation="vertical"
    tools:context=".screens.LanguageActivity">

    <ImageView
        android:id="@+id/image_back_language"
        android:layout_width="@dimen/size_icon_home2"
        android:layout_height="@dimen/size_icon_home2"
        app:srcCompat="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/Language"
        android:textSize="16sp"
        android:fontFamily="@font/anuphan_semi_bold"
        android:textColor="@color/black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_english_language"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top_layout"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/English"
            android:textSize="@dimen/text_size_setting"
            android:textColor="@color/black"
            android:fontFamily="@font/schibsted_grotesk_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_check_english_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✓"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_vietnamese_language"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top_layout"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vietnamese"
            android:textSize="@dimen/text_size_setting"
            android:textColor="@color/black"
            android:fontFamily="@font/schibsted_grotesk_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_check_vietnamese_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✓"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>