<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    style="@style/back_ground"
    tools:context=".screens.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_back_settings"
            android:layout_width="@dimen/size_icon_home2"
            android:layout_height="@dimen/size_icon_home2"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/anuphan_semi_bold"
            android:text="@string/Settings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anuphan_semi_bold"
                android:text="@string/General"
                android:textColor="@color/gray_blue"
                android:textSize="@dimen/text_size_setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/line" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constaint_layout_language_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Language"
                    android:textColor="@color/black"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_value_language_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:text="English"
                    android:textColor="@color/gray_blue"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/size_icon_right_arrow_seting"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/right_arrow" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2FA"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Turn off"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textColor="@color/gray_blue"
                    android:layout_marginEnd="10sp"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/size_icon_right_arrow_seting"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/right_arrow" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_setting"
                android:textColor="@color/gray_blue"
                android:fontFamily="@font/anuphan_semi_bold"
                android:text="@string/Appearance" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/line"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constaint_layout_appearance_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Appearance"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Light Mode"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textColor="@color/gray_blue"
                    android:layout_marginEnd="10sp"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/size_icon_right_arrow_seting"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/right_arrow" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_setting"
                android:textColor="@color/gray_blue"
                android:fontFamily="@font/anuphan_semi_bold"
                android:text="@string/Others" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/line"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Change_Password"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="******"
                    android:textColor="@color/gray_blue"
                    android:layout_marginEnd="10sp"
                    android:fontFamily="@font/schibsted_grotesk_medium"
                    android:textSize="@dimen/text_size_setting"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/size_icon_right_arrow_seting"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/right_arrow" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>